--- a/src/components/_advantages.html
+++ b/src/components/_advantages.html
@@ -5,7 +5,7 @@
     <div class="advantages__inner">
       <img class="advantages__background" src="./img/advantages/background.png" alt="background"/>
       <div class="advantages__row">
-        <div class="advantages__column">
+        <div class="advantages__column" data-anim-item>
           <div class="advantages__icon">
             <img class="advantages__img" src="./img/advantages/security-icon.svg" alt="security">
           </div>
@@ -16,7 +16,7 @@
             </div>
           </div>
         </div>
-        <div class="advantages__column">
+        <div class="advantages__column" data-anim-item>
           <div class="advantages__icon">
             <img class="advantages__img" src="./img/advantages/lamp-icon.svg" alt="security">
           </div>
@@ -27,7 +27,7 @@
             </div>
           </div>
         </div>
-        <div class="advantages__column">
+        <div class="advantages__column" data-anim-item>
           <div class="advantages__icon">
             <img class="advantages__img" src="./img/advantages/control-icon.svg" alt="security">
           </div>
