--- a/src/components/_intro.html
+++ b/src/components/_intro.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="intro__inner">
       <div class="intro__row">
-        <div class="intro__content">
+        <div class="intro__content" data-anim-item>
           <h1 class="intro__title">future is now</h1>
           <h2 class="intro__subtitle">smart home</h2>
           <div class="intro__text">
@@ -10,7 +10,7 @@
           </div>
           <a class="main-button" href="/">See more</a>
         </div>
-        <div class="intro__column">
+        <div class="intro__column" data-anim-item>
           <img class="intro__img" src="./img/intro/smart-home.png" alt="smart-home">
         </div>
       </div>
