--- a/src/components/_monitoring.html
+++ b/src/components/_monitoring.html
@@ -1,4 +1,4 @@
-<section class="monitoring">
+<section class="monitoring" data-anim-item>
   <img class="hexagon hexagon-6" src="./img/hexagon-6.png" alt="hexagon"/>
   <div class="container">
     <div class="monitoring__inner">
