--- a/src/components/_security-mode.html
+++ b/src/components/_security-mode.html
@@ -3,7 +3,7 @@
     <div class="security-mode__inner">
       <h2 class="security-mode__title">security mode type</h2>
       <div class="security-mode__row">
-        <div class="security-mode__column">
+        <div class="security-mode__column" data-anim-item>
           <img class="security-mode__background" src="./img/security-modes/background.png" alt="background">
           <div class="security-mode__icon">
             <img class="security-mode__img" src="./img/security-modes/type-a.png" alt="security-type" >
@@ -16,7 +16,7 @@
             <a class="main-button" href="#">See more</a>
           </div>
         </div>
-        <div class="security-mode__column">
+        <div class="security-mode__column" data-anim-item>
           <img class="security-mode__background" src="./img/security-modes/background.png" alt="background">
           <div class="security-mode__icon">
             <img class="security-mode__img" src="./img/security-modes/type-b.png" alt="security-type" >
@@ -29,7 +29,7 @@
             <a class="main-button" href="#">See more</a>
           </div>
         </div>
-        <div class="security-mode__column">
+        <div class="security-mode__column" data-anim-item>
           <img class="security-mode__background" src="./img/security-modes/background.png" alt="background">
           <div class="security-mode__icon">
             <img class="security-mode__img" src="./img/security-modes/type-c.png" alt="security-type" >
