--- a/src/components/_security.html
+++ b/src/components/_security.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="security__inner">
       <div class="security__row">
-        <div class="security__column">
+        <div class="security__column" data-anim-item>
           <img class="security__img" src="./img/security/smart-home-security.png" alt="smart-home">
         </div>
-        <div class="security__content">
+        <div class="security__content" data-anim-item>
           <h2 class="security__title">smart home</h2>
           <h5 class="security__subtitle">Security System</h5>
           <div class="security__text">
