--- a/src/components/_smart-home.html
+++ b/src/components/_smart-home.html
@@ -3,10 +3,10 @@
   <div class="container">
     <div class="smart-home__inner">
       <div class="smart-home__row">
-        <div class="smart-home__column">
+        <div class="smart-home__column" data-anim-item>
           <img class="smart-home__img" src="./img/smart-home/home.png" alt="smart-home">
         </div>
-        <div class="smart-home__content">
+        <div class="smart-home__content" data-anim-item>
           <h3 class="smart-home__title">smart home</h3>
           <div class="smart-home__text">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim consectetur nisi ad consequuntur illo ut! Magnam enim fuga at perspiciatis sapiente sunt qui rerum alias laborum quo et in corporis, aut deleniti dolorum obcaecati. Aperiam vitae, odit explicabo id minus cum voluptas, perferendis quo et ut ipsam nesciunt autem consequuntur nam, aspernatur quod neque sit provident veniam. Veniam, eveniet et!</p>
