--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,16 +1,76 @@
 .main-button{
   display: inline-block;
-  padding: 7px 70px;
+  padding: 7px 50px;
   text-align: center;
   font-size: 28px;
-  border: 1px solid $white;
+  border: 2px solid $white;
   border-radius: 35px;
   color: $white;
+  transition: .2s;
+
+  &:hover{
+    background-color: $dark-blue;
+    border-color: $dark-blue;
+    transition: .2s;
+  }
+
   @media(max-width: 1301px){
     font-size: 24px;
   }
 
   @media(max-width: 992px){
     padding: 7px 40px;
+  }
+}
+
+.burger-button{
+  position: relative;
+  width: 32px;
+  height: 22px;
+  display: none;
+
+  @media(max-width: 924px){
+    display: block;
+  }
+
+  &__line,
+  &::before,
+  &::after{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: $white;
+    border-radius: 10px;
+    transition: width .2s;
+  }
+
+  &:hover{
+    .burger-button__line{
+      width: 75%;
+    }
+
+    &::before{
+      width: 50%;
+    }
+
+    &::after{
+      width: 25%;
+    }
+  }
+
+  &__line{
+    top: 0;
+  }
+
+  &::before{
+    content: '';
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  &::after{
+    content: '';
+    bottom: 0;
   }
 }
