--- a/src/scss/components/_advantages.scss
+++ b/src/scss/components/_advantages.scss
@@ -28,6 +28,26 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    transform: translateY(200px);
+    opacity: 0;
+    &:nth-child(1){
+      transition-duration: 1s;
+    }
+    &:nth-child(2){
+      transition-duration: 1s;
+    }
+
+    &.active{
+      opacity: 1;
+      transform: translateY(0);
+      transition-duration: 1s;
+      &:nth-child(2){
+        transition-delay: 0.5s;
+      }
+      &:nth-child(3){
+        transition-delay: 1s;
+      }
+    }
 
     @media(max-width: 992px){
       padding: 0 20px;
