--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,4 +1,6 @@
 .header{
+  position: relative;
+  z-index: 1000;
 
   &__inner{
     display: flex;
@@ -20,7 +22,9 @@
 }
 
 .menu{
-  @media(max-width: 992px){
+  overflow: auto;
+
+  @media(max-width: 924px){
     display: none;
   }
 
@@ -34,9 +38,34 @@
     color: $white;
     font-weight: 500;
     font-size: 22px;
+    transition: color .2s;
 
     @media(max-width: 1301px){
       padding: 30px 15px;
+    }
+
+    &:hover{
+      color: $dark-blue;
+    }
+  }
+
+  &.open{
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+    left: 0;
+    top: 182px;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+
+    .menu__list{
+      flex-direction: column;
+      align-items: flex-end;
+    }
+
+    @media(max-width: 450px){
+      top: 142px;
     }
   }
 }
@@ -45,7 +74,11 @@
   max-width: 295px;
   width: 100%;
 
-  @media(max-width: 992px){
+  @media(max-width: 1150px){
+    max-width: 200px;
+  }
+
+  @media(max-width: 924px){
     display: none;
   }
 }
@@ -60,21 +93,76 @@
   padding: 6px 25px;
   border: 2px solid $white;
   background-color: transparent;
+  transition: border-color .2s;
+
   &::placeholder{
     color: $white;
     text-align: right;
+  }
+
+  &:focus{
+    border-color: $purple;
   }
 }
 
 
 .socials{
-  display: flex;
-
-  @media(max-width: 1150px){
+  position: relative;
+  @media(max-width: 924px){
     display: none;
   }
 
+  &__list{
+    display: flex;
+
+    @media(max-width: 1150px){
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      right: 0;
+      top: 36px;
+      &.active{
+        display: flex;
+      }
+    }
+  }
+
+  &__dropdown{
+    display: none;
+    width: 29px;
+    height: 29px;
+    background-color: $white;
+    border-radius: 50%;
+    margin-left: 11px;
+    padding: 5px;
+    cursor: pointer;
+    transition: background-color .3s;
+    @media(max-width: 1150px){
+      display: block;
+    }
+
+    &:hover{
+      background-color: $purple;
+
+      .dropdown-icon{
+        fill: $white;
+      }
+    }
+  }
+
   &__item{
+    margin-right: 11px;
+    &:last-child{
+      margin-right: 0;
+    }
+
+    @media(max-width: 1150px){
+      margin: 0 0 6px 0;
+    }
+  }
+
+  &__link{
+    display: inline-block;
     width: 29px;
     height: 29px;
     border-radius: 50%;
@@ -83,9 +171,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 11px;
-    &:last-child{
-      margin-right: 0;
+    transition: background-color .3s;
+    &:hover{
+      background-color: $purple;
+      .socials__icon{
+        fill: $white;
+      }
     }
   }
 
@@ -93,5 +184,13 @@
     width: 100%;
     height: 100%;
     fill: $purple;
+    transition: fill .3s;
   }
+}
+
+.dropdown-icon{
+  width: 100%;
+  height: 100%;
+  fill: $purple;
+  transition: fill .2s;
 }
