--- a/src/scss/components/_smart-home.scss
+++ b/src/scss/components/_smart-home.scss
@@ -18,6 +18,15 @@
   &__column{
     width: 551px;
     height: 390px;
+    transform: translateY(200px);
+    opacity: 0;
+    transition: 1s;
+
+    &.active{
+      opacity: 1;
+      transform: translateY(0);
+      transition: 1s;
+    }
 
     @media(max-width: 992px){
       width: 420px;
@@ -54,6 +63,17 @@
   &__content{
     flex: 1;
     padding-left: 35px;
+
+    transform: translateY(200px);
+    opacity: 0;
+    transition-duration: 1s;
+
+    &.active{
+      transition-duration: 1s;
+      transition-delay: 0.4s;
+      opacity: 1;
+      transform: translateY(0);
+    }
 
     @media(max-width: 450px){
       padding-left: 0;
